--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - echo "$AWS_ACCOUNT_ID.dkr $AWS_DEFAULT_REGION $IMAGE_REPO_NAME:$IMAGE_TAG"
+      - echo "${AWS_ACCOUNT_ID}.dkr $AWS_DEFAULT_REGION $IMAGE_REPO_NAME:$IMAGE_TAG"
       - exit(0)
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
